# E-O-automation-contract-generator

./: .gitignore  EO_Contract_Generator.spec  README.md  build_exe.bat  pyproject.toml  requirements.txt
data/: .gitkeep
output/: .gitkeep
src/: main.py
src/config/: paths.py
src/core/: loader.py  processor.py  writer.py
src/ui/: app.py
template/: .gitkeep  Settlement Form_Draft.docx  Settlement Form_Draft_Elan & SYNA.docx
